fix: reduce notification font size for better alignment

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -305,7 +305,7 @@ body {
   right: -5px;
   background: red;
   color: #ccc;
-  font-size: 12px;
+  font-size: 8px;
   width: 18px;
   height: 18px;
   display: flex;
